--- a/src/app/admin/admin-grid-master.html
+++ b/src/app/admin/admin-grid-master.html
@@ -45,7 +45,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-1.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-1.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
@@ -72,7 +72,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-2.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-2.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
@@ -99,7 +99,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-3.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-3.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
@@ -126,7 +126,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-4.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-4.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
@@ -153,7 +153,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-5.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-5.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
@@ -180,7 +180,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-6.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-6.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
@@ -207,7 +207,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-7.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-7.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
@@ -234,7 +234,7 @@
                                         <span></span>
                                     </div>
                                     <div class="temp_view">
-                                        <img src="/assets/images/theme-views/temp-view-8.png" class="temp_img" alt="" />
+                                        <img src="./assets/images/theme-views/temp-view-8.png" class="temp_img" alt="" />
                                         <div class="img_hover">
                                             <div class="hvr_btn">
                                                 <div class="live_demo_btn">
