--- a/src/app/admin/widgetContent/owl-component.html
+++ b/src/app/admin/widgetContent/owl-component.html
@@ -1,8 +1,10 @@
 
                                 <owl-carousel  #owlElement class="total_info owl-carousel" id="sub_wdgt_carousel" 
                                 [options]="{items: 4, dots: false, nav: false, loop:true,navText:false}"
-                                [carouselClasses]="['', 'row', 'sliding']">
-                             <ng-content></ng-content>
+                                [carouselClasses]="['', 'row', 'sliding']"
+                                >
+                            <ng-content></ng-content>
+                     
                                    
                                 </owl-carousel>
 
