--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -3065,6 +3065,30 @@ full_clndr {
     .clndr_grid td {
         padding: 10px 0;
     }
+    
+    .save_wid_btn {
+        text-align: right;
+        padding-top: 22px;
+        padding-bottom: 22px;
+    }
+    
+    
+    
+    .save_wid_btn .btn {
+        background-color:transparent;
+        border:1px solid #000;
+        border-radius: 50px;
+        color: #000;
+        font-size: 14px;
+        font-weight: 400;
+        padding: 7px 25px;
+       
+        text-transform: uppercase;
+    }
+    
+
+
+
 
 /*  end all widget  */
 
